# media-gateway

./: CMakeLists.txt  README.md  async_queue.cc  async_queue.h  atomic.cc  atomic.h  auth.cc  auth.h  build.sh  client.cc  cmdline.c  cmdline.h  config.cc  config.h  error.cc  error.h  gateway.cc  gateway.cfg  gateway.ggo  gateway.h  gateway.transport.websockets.cfg  helper.cc  helper.h  main.cc  mutex.h  refcount.h  utils.cc  utils.h
cmake/: FindGio.cmake  FindGlib.cmake  FindJsoncpp.cmake  FindLibConfig.cmake  FindLibWebSockets.cmake  FindLibevent.cmake  FindNice.cmake  FindOpenSSL.cmake
handle/: handle.cc  handle.h  nice_handle.cc  nice_handle.h  p2p_handle.cc  p2p_handle.h
jwt/: jwt-gnutls.cc  jwt-openssl.cc  jwt-wincrypt.cc  jwt.cc  jwt.h
plugins/: p2p_call.cc  p2p_call.h  plugin.cc  plugin.h
rtc_base/: CMakeLists.txt  net_helpers.cc  task_queue.cc  task_queue_libevent.cc  thread_pool.cc  thread_pool.h
rtc_base/strings/: json.cc  json.h
rtc_base/system/: thread_registry.cc
sdk/: gateway_client.cc  gateway_client.h  plugin_handle.h  transaction.cc  transaction.h
system_wrappers/: CMakeLists.txt
transports/: transport.cc  transport.h  websockets_transport.cc  websockets_transport.h
